# brewlogger

./: .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  LICENSE  LICENSE_COMMERCIAL  README.md  TODO.md  docker-compose.yaml  example_docker-compose.yaml  pyproject.toml  setup.py
.github/workflows/: push.yml
integration-test/: conftest.py  test_live_gravity_to_ml_flow.py
service-api/: .development_env  Dockerfile  entrypoint.sh  local.development_env
service-api/app/: log_conf.yaml
service-api/app/api/: app.py  brewpi.py  cache.py  chamberctrl.py  config.py  fermentation_control.py  fermentationcontrol.py  log.py  main.py  mdns.py  poly.py  scheduler.py  security.py  utils.py  ws.py
service-api/app/migrate/: dump.py  migrate.py
service-api/app/static/: brewloggerapi.js  (+1 more)
service-api/requirements/: requirements.in  requirements.txt  test-requirements.  test-requirements.in  test-requirements.txt
service-ble/: Dockerfile  entrypoint.sh  gravitymon_scan.py  requirements.in  requirements.txt  scan.py  supervisord.conf  tilt_scan.py
service-log/: Dockerfile  entrypoint.sh  logcollector.py  requirements.in  requirements.txt  test.py
service-mdns/: Dockerfile  README.md  entrypoint.sh  env.sample  mdns-repeater.c  mdns.py  requirements.txt
service-mdns-old/: Dockerfile  README.md  entrypoint.sh  mdns-repeater.c
service-mdns/app/: main.py
service-mdns/requirements/: requirements.txt
service-mdns2/: Dockerfile  entrypoint.sh  mdns.py  requirements.txt
service-web/: Dockerfile  nginx.conf
ui-tests/: ui-test.py  uitest.py
utilities/: logcollector.py
(+78 files in other folders)
